color change-o and collapse bar bug fix

--- a/style/style.css
+++ b/style/style.css
@@ -3,10 +3,49 @@ body, html{
   padding: 0;
   height: 100%;
 }
+* {
+  transition: background-color 500ms ease, color 500ms ease;
+}
 
 body {
   background-color: #E7EAEC;
 }
+
+table{
+  margin-top: 50px;
+  width: 100%;
+  margin-bottom: 50px;
+}
+
+td{
+  text-align: center;
+}
+
+
+
+#free{
+  width: 20%;
+  text-align: center;
+}
+
+#private{
+  width: 20%;
+  text-align: center;
+}
+
+#superPrivate{
+  width: 20%;
+  text-align: center;
+}
+
+table, th, tr, thead, td {
+  padding: 10px;
+}
+
+#features{
+  width: 40%;
+}
+
 
 h1,h2,h3,h4,h5,h6, p{
   margin: 0;
@@ -35,7 +74,20 @@ ul{
 
 li{
   list-style: none;
-  padding: 10px;
+}
+
+img{
+  max-width: 100%;
+  height: 100%;
+}
+
+.badge{
+  display: inline-block;
+  background-color: #00e565;
+  padding: 2px 10px;
+  border-radius: 50px;
+  margin-left: 5px;
+  color: white;
 }
 
 .headerHover:hover {
